--- a/index.html
+++ b/index.html
@@ -47,11 +47,14 @@
 
     <section id="about" class="container-fluid">
         <div class="col-8 col-lg-4 profile-picture">
-            <img src="assets/images/me.png" class="rounded-circle" alt="">
+            <img src="assets/images/my_image.png" class="rounded-circle" alt="">
         </div>
         <div class="heading">
             <h1><span>Kiehiva</span> PETERANO</h1>
             <h3>Concepteur/Développeur d'applications - Bachelor bac +3 (en alternance)</h3>
+            <a class="button-1 me-2" target="_blank" href="https://github.com/Kiehiva" target="_blank">Github</a>
+            <a class="button-1 me-2" target="_blank" href="https://www.linkedin.com/in/kiehiva-peterano/"
+                target="_blank">LinkedIn</a>
             <a class="button-1" target="_blank" href="docs/CV.png">Télécharger CV</a>
         </div>
     </section>
@@ -63,44 +66,91 @@
         </div>
 
         <div class="container">
+            <h3>Technologies web</h3>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="border-1 progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                            style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-                            <h5>HTML / CSS 95%</h5>
+                        <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>HTML / CSS · 95%</h5>
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                            style="width: 85%;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-                            <h5>PHP 85%</h5>
+                        <div class="progress-bar" role="progressbar" style="width: 85%;" aria-valuenow="85"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>PHP · 85%</h5>
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                            style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                            <h5>Javascript 80%</h5>
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Javascript · 80%</h5>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                            style="width: 90%;" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-                            <h5>Symfony 90%</h5>
+                        <div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Symfony · 90%</h5>
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                            style="width: 80%;" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-                            <h5>ReactJS 80%</h5>
+                        <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="80"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>ReactJS · 80%</h5>
                         </div>
                     </div>
                     <div class="progress">
-                        <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                            style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
-                            <h5>NodeJS 60%</h5>
+                        <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>NodeJS · 60%</h5>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-5">
+            <h3>Image et Numérique</h3>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 70%;" aria-valuenow="70"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Unreal Engine 4 · 70%</h5>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Modélisation 3D · 60%</h5>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Animation 3D · 50%</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 75%;" aria-valuenow="75"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Adobe Photoshop · 75%</h5>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Adobe After Effect · 60%</h5>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60"
+                            aria-valuemin="0" aria-valuemax="100">
+                            <h5>Adobe Illustrator · 60%</h5>
                         </div>
                     </div>
                 </div>
@@ -128,8 +178,7 @@
                             </div>
                             <div class="timeline-body">
                                 <p>Rédaction de documents techniques</p>
-                                <p>Application mobile pour l'APF</p>
-
+                                <p>Réalisation d'assets 2D sous Adobe Photoshop</p>
                             </div>
                         </div>
                     </div>
@@ -148,6 +197,7 @@
                             <div class="timeline-body">
                                 <p>Création d'un TPS en ligne</p>
                                 <p>Gestion d'une équipe de développement</p>
+                                <p>Développement sous Unreal Engine 4</p>
                             </div>
                         </div>
                     </div>
@@ -166,6 +216,7 @@
                             <div class="timeline-body">
                                 <p>Application mobile de personnalisation textile</p>
                                 <p>Création de contenu promotionnel</p>
+                                <p>Développement sous Unreal Engine 4</p>
                             </div>
                         </div>
                     </div>
@@ -183,6 +234,8 @@
                             </div>
                             <div class="timeline-body">
                                 <p>Création d'un "serious game"</p>
+                                <p>Création d'assets 2D et 3D</p>
+                                <p>Développement sous Unreal Engine 4</p>
                             </div>
                         </div>
                     </div>
@@ -196,16 +249,29 @@
             <div class="divider"></div>
             <div class="heading">
                 <h2>Education</h2>
-                <div class="row">
+                <div class="row justify-content-center ">
+                    <div class="col-md-4">
+                        <div class="education-block">
+                            <h5>2022 - aujourd'hui</h5>
+                            <i class="bi bi-award-fill"></i>
+                            <h3>Concepteur développeur d'application </h3>
+                            <h4>CESI de Brest</h4>
+                            <div class="divider"></div>
+                            <p>Développement d'applications informatique</p>
+                            <p>Management d'équipe</p>
+                            <p class="in_process">En cours</p>
+                        </div>
+                    </div>
                     <div class="col-md-4">
                         <div class="education-block">
                             <h5>2021 - 2022</h5>
                             <i class="bi bi-award-fill"></i>
-                            <h3>DUT Developpeur Web</h3>
+                            <h3>Titre pro - Developpeur Web et web mobile</h3>
                             <h4>AFPA de Brest</h4>
                             <div class="divider"></div>
                             <p>Back End & Front End</p>
                             <p>Base de données</p>
+                            <p class="validation">Validé</p>
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -216,9 +282,11 @@
                             <h4>Université de Polynésie Française</h4>
                             <div class="divider"></div>
                             <p>Développement Web et Logiciel</p>
-                            <p>Mathématiques pour l'informatique</p>
+                            <p>Informatique général</p>
+                            <p class="validation">L1 validé</p>
                         </div>
                     </div>
+
                     <div class="col-md-4">
                         <div class="education-block">
                             <h5>2015 - 2018</h5>
@@ -228,6 +296,7 @@
                             <div class="divider"></div>
                             <p>Création de contenu numérique</p>
                             <p>Gestion de projets</p>
+                            <p class="validation">Validé</p>
                         </div>
                     </div>
                 </div>
@@ -242,7 +311,7 @@
                 <h2>Portfolio</h2>
             </div>
             <div class="row">
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-5 mb-md-3">
                     <a href="https://kiehiva.github.io/TahitiAgency/" target="_blank">
                         <img src="./assets/images/tahiti_agency.png" class="img-thumbnail" alt="facebook share">
                     </a>
@@ -250,7 +319,7 @@
                         <a href="https://github.com/Kiehiva/TahitiAgency" target="_blank">Lien GitHub</a>
                     </p>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-5 mb-md-3">
                     <a href="https://kiehiva.github.io/Actress/" target="_blank">
                         <img src="./assets/images/actress.png" class="img-thumbnail" alt="facebook share">
                     </a>
@@ -258,7 +327,7 @@
                         <a href="https://github.com/Kiehiva/Actress" target="_blank">Lien GitHub</a>
                     </p>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-4 mb-5 mb-md-3">
                     <a href="https://kiehiva.github.io/Snakee/">
                         <img src="./assets/images/snakee.png" class="img-thumbnail" alt="facebook share">
                     </a>
